# django-admin-style-linker

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml  security.yml
admin_style_linker/: __init__.py  mixins.py
admin_style_linker/static/admin_style_linker/js/: live_style_preview.js
